Issue: 10

Type.: Feature
File.: Host
Desc.: Added the execution time of the running kernel to the status display

Type.: Feature
File.: Host
Desc.: Moved rules_optimize to hashcat-utils

Type.: Feature
File.: Host
Desc.: Run weak-hash checks only in straight-attack mode, this greatly reduces code complexity

Type.: Change
File.: Host
Desc.: Renamed option --gpu-accel to --kernel-accel
Issue: 2

Type.: Change
File.: Host
Desc.: Renamed option --gpu-loops to --kernel-loops
Issue: 2

Type.: Change
File.: Host
Desc.: Renamed option --gpu-devices to --opencl-devices
Issue: 2

Type.: Change
File.: Host
Desc.: Removed option --benchmark-mode, you can now use --benchmark in combination with --workload-profile

Type.: Change
File.: Host
Desc.: Expanded version information
Issue: 138

Type.: Change
File.: Host
Desc.: Stick to older libOpenCL to avoid errors like this: version `OPENCL_2.0' not found

Type.: Change
File.: Host
Desc.: Use a fixed path for the potfile rather than session depending
Issue: 99

Type.: Bug
File.: Host
Desc.: Fixed a bug in combination of --restore and a user immediately aborting the session after restart
Trac.: 684

Type.: Bug
File.: Kernel
Desc.: Fixed a bug in the implementation of GOST R 34.11-94: Zero length passwords were not cracked

Type.: Bug
File.: Kernel
Desc.: Fixed a bug in rule-engine for NVidia devices: Code for left- and right-shift were switched

Type.: Bug
File.: Host
Desc.: Fixed a bug in -m 2100 = DCC2: Forced default iteration count for hashes to 10240

Type.: Bug
File.: Host
Desc.: Fixed a bug in line counter: Conditional jump or move depends on uninitialised value

Type.: Bug
File.: Host
Desc.: Fixed some checks in the parser of -m 111 = nsldaps, SSHA-1(Base64), Netscape LDAP SSHA

Type.: Bug
File.: Host
Desc.: Fixed some checks in the parser of -m 500 = md5crypt, MD5(Unix), FreeBSD MD5, Cisco-IOS MD5

Type.: Bug
File.: Host
Desc.: Fixed some checks in the parser of -m 1711 = SSHA-512(Base64), LDAP {SSHA512}

Type.: Bug